--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-PORT=7000
+PORT=process.env.PORT
 MONGODB_URI=mongodb+srv://grocery_db_user:grocery142001%40singh@grocery.0ju9nst.mongodb.net/grocerydb
 
 USERNAME=grocery_db_user
